All handlers has been updated and checked
