# server/docs/swagger.json
@@ -126,46 +126,6 @@
                 }
             }
         },
-        "/api/register": {
-            "post": {
-                "description": "Регистрирует пользователя с ролью по-умолчанию (user)",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Регистрация пользователя",
-                "parameters": [
-                    {
-                        "description": "Данные для входа",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/swagger.AuthRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Пользователь успешно зарегистрирован",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Ошибка при регистрации пользователя",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/api/reset-password": {
             "post": {
                 "description": "Обновляет пароль пользователя после сброса. Требуется валидный токен сброса пароля.",
@@ -211,6 +171,46 @@
                     },
                     "500": {
                         "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/signup": {
+            "post": {
+                "description": "Регистрирует пользователя с ролью по-умолчанию (user)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Регистрация пользователя",
+                "parameters": [
+                    {
+                        "description": "Данные для входа",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/swagger.AuthRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Пользователь успешно зарегистрирован",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Ошибка при регистрации пользователя",
                         "schema": {
                             "type": "string"
                         }
@@ -319,7 +319,7 @@
                 }
             }
         },
-        "/api/users/{id}": {
+        "/api/users/update/{id}": {
             "put": {
                 "security": [
                     {
@@ -382,6 +382,67 @@
                     },
                     "500": {
                         "description": "Failed to update user",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/users/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "CookieAuth": []
+                    }
+                ],
+                "description": "Получает данные конкретного пользователя",
+                "tags": [
+                    "users"
+                ],
+                "summary": "Получение данных пользователя",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID пользователя",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Данные пользователя успешно получены",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid user ID",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Access denied",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to get user",
                         "schema": {
                             "type": "string"
                         }
@@ -521,6 +582,14 @@
                 }
             }
         },
+        "models.MBTI": {
+            "type": "object",
+            "properties": {
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Personal": {
             "type": "object",
             "properties": {
@@ -560,37 +629,63 @@
         "models.UpdateUserRequest": {
             "type": "object",
             "properties": {
-                "birthday": {
-                    "type": "string"
+                "auth": {
+                    "type": "object",
+                    "properties": {
+                        "email": {
+                            "type": "string"
+                        },
+                        "password": {
+                            "type": "string"
+                        },
+                        "role": {
+                            "type": "string"
+                        },
+                        "username": {
+                            "type": "string"
+                        }
+                    }
                 },
-                "city": {
-                    "type": "string"
+                "location": {
+                    "type": "object",
+                    "properties": {
+                        "city": {
+                            "type": "string"
+                        },
+                        "country": {
+                            "type": "string"
+                        }
+                    }
                 },
-                "country": {
-                    "type": "string"
+                "mbti": {
+                    "type": "object",
+                    "properties": {
+                        "type": {
+                            "type": "string"
+                        }
+                    }
                 },
-                "email": {
-                    "type": "string"
+                "personal": {
+                    "type": "object",
+                    "properties": {
+                        "birthday": {
+                            "type": "string"
+                        },
+                        "name": {
+                            "type": "string"
+                        },
+                        "patronymic": {
+                            "type": "string"
+                        },
+                        "phone": {
+                            "type": "string"
+                        },
+                        "surname": {
+                            "type": "string"
+                        }
+                    }
                 },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "patronymic": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "role": {
-                    "type": "string"
-                },
-                "surname": {
-                    "type": "string"
-                },
-                "username": {
+                "position": {
                     "type": "string"
                 }
             }
@@ -630,6 +725,9 @@
                 "location": {
                     "$ref": "#/definitions/models.Location"
                 },
+                "mbti": {
+                    "$ref": "#/definitions/models.MBTI"
+                },
                 "password": {
                     "type": "string"
                 },
@@ -640,9 +738,6 @@
                     "type": "string"
                 },
                 "role": {
-                    "type": "string"
-                },
-                "type": {
                     "type": "string"
                 },
                 "updatedAt": {
